examples/errors/slicebyteslice.go
package errors

type SliceOfByteSlice struct {
	Value [][]byte
}
